Replace university name to be formal.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,13 +5,13 @@
 				   <section class="6u" id="member">
 									<h3>運営委員</h3>
 									<ul class="links">
-										<li><a href="#">渡辺知恵美（筑波大、リーダー）</a></li>
-										<li><a href="#">森本千佳子（東工大）</a></li>
-										<li><a href="#">永瀬美穂（産技大）</a></li>
-										<li><a href="#">木塚あゆみ（はこだて未来大）</a></li>
-										<li><a href="#">小口正人（お茶大）</a></li>
-										<li><a href="#">山内正人（慶応大）</a></li>
-										<li><a href="#">松本倫子（埼玉大）</a></li>
+										<li><a href="#">渡辺知恵美（筑波大学、リーダー）</a></li>
+										<li><a href="#">森本千佳子（東京工業大学）</a></li>
+										<li><a href="#">永瀬美穂（産業技術大学院大学）</a></li>
+										<li><a href="#">木塚あゆみ（公立はこだて未来大学）</a></li>
+										<li><a href="#">小口正人（お茶の水女子大学）</a></li>
+										<li><a href="#">山内正人（慶応大学）</a></li>
+										<li><a href="#">松本倫子（埼玉大学）</a></li>
 									</ul>
 			           </section>
 			           <section class="6u" id="inquiry">
