remove automatically generated css files

--- a/assets/css/style-mobilep.scss
+++ b/assets/css/style-mobilep.scss
@@ -1,3 +1,8 @@
+---
+---
+@import 'vars';
+@import 'mixins';
+
 /*
 	Arcana by HTML5 UP
 	html5up.net | @n33co
@@ -6,27 +11,33 @@
 
 /* Lists */
 
-	ul.actions li {
-		display: block;
-		padding: 1.5em 0 0 0;
-	}
-
-		ul.actions li:first-child {
-			padding: 0;
+	ul {
+		&.actions {
+			li {
+				display: block;
+				padding: 1.5em 0 0 0;
+		
+				&:first-child {
+					padding: 0;
+				}
+			}
 		}
+	}
 
 /* Icon */
 
-	.icon.major {
-		width: 4em;
-		height: 4em;
-		line-height: 4em;
-		box-shadow: 0 0 0 7px white, 0 0 0 8px #e0e0e0;
-	}
-
-		.icon.major:before {
-			font-size: 24px;
+	.icon {
+		&.major {
+			width: 4em;
+			height: 4em;
+			line-height: 4em;
+			box-shadow: 0 0 0 7px white, 0 0 0 8px $color-border;
+			
+			&:before {
+				font-size: 24px;
+			}
 		}
+	}
 
 /* Button */
 
@@ -37,30 +48,34 @@
 		width: 100%;
 		display: block;
 	}
-
+	
 /* Box */
 
-	.box.highlight {
-		padding-left: calc(4em + 30px);
-	}
+	.box {
+		&.highlight {
+			padding-left: calc(4em + 30px);
+		}
 
-	.box.post .inner {
-		margin-left: calc(30% + 20px);
-	}
+		&.post {
+			.inner {
+				margin-left: calc(30% + 20px);
+			}
 
-	.box.post .image {
-		width: 30%;
+			.image {
+				width: 30%;
+			}
+		}
 	}
-
+	
 /* Banner */
 
 	#banner {
 		height: 20em;
-	}
-
-		#banner header {
+		
+		header {
 			padding: 20px;
 		}
+	}
 
 /* Wrapper */
 
@@ -73,7 +88,7 @@
 	#cta {
 		padding: 20px;
 	}
-
+	
 /* Footer */
 
 	#footer {
