--- a/assets/css/style-narrow.scss
+++ b/assets/css/style-narrow.scss
@@ -1,3 +1,8 @@
+---
+---
+@import 'vars';
+@import 'mixins';
+
 /*
 	Arcana by HTML5 UP
 	html5up.net | @n33co
@@ -7,12 +12,6 @@
 /* Basic */
 
 	body, input, select, textarea {
-		font-size: 14pt;
+		font-size: 12pt;
 		line-height: 1.5em;
-	}
-
-/* Banner */
-
-	#banner {
-		height: 24em;
 	}
