--- a/assets/css/style-normal.scss
+++ b/assets/css/style-normal.scss
@@ -1,3 +1,8 @@
+---
+---
+@import 'vars';
+@import 'mixins';
+
 /*
 	Arcana by HTML5 UP
 	html5up.net | @n33co
@@ -13,53 +18,61 @@
 
 /* Lists */
 
-	ol.default {
-		list-style: decimal;
-		padding-left: 1.25em;
-	}
+	ol {
+		&.default {
+			list-style: decimal;
+			padding-left: 1.25em;
 
-		ol.default li {
-			padding-left: 0.25em;
+			li {
+				padding-left: 0.25em;
+			}
 		}
-
-	ul.icons li a, ul.icons li span {
-		font-size: 1.5em;
 	}
 
+	ul {
+		&.icons {
+			li {
+				a, span {
+					font-size: 1.5em;
+				}
+			}
+		}
+	}
+		
 /* Header */
 
 	#header {
 		padding: 2em 0 0 0;
-	}
-
-		#header h1 {
+		
+		h1 {
 			padding: 0 0 1.75em 0;
 		}
-
+	}
+		
 /* Banner */
 
 	#banner {
 		height: 20em;
 	}
-
+	
 /* Wrapper */
 
 	.wrapper {
 		padding: 3em 0 1em 0;
 	}
-
+	
 /* CTA */
 
 	#cta {
 		padding: 2em 0;
 	}
-
+	
 /* Footer */
 
 	#footer {
 		padding: 3em 0 3em 0;
-	}
 
-		#footer .container {
+		.container {
 			margin-bottom: 1em;
 		}
+	}
