--- a/assets/css/style-wide.scss
+++ b/assets/css/style-wide.scss
@@ -1,3 +1,8 @@
+---
+---
+@import 'vars';
+@import 'mixins';
+
 /*
 	Arcana by HTML5 UP
 	html5up.net | @n33co
@@ -7,6 +12,12 @@
 /* Basic */
 
 	body, input, select, textarea {
-		font-size: 12pt;
+		font-size: 14pt;
 		line-height: 1.5em;
+	}
+	
+/* Banner */
+
+	#banner {
+		height: 24em;
 	}
