add link to enpit.jp

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,6 +19,13 @@
 			             <ul class="links">
 			             	<li><a href="https://docs.google.com/forms/d/e/1FAIpQLScQAumH-goAM6Y8yHsp8--BK_qR_Lg6MMWz9frj84thmRWrjg/viewform?c=0&w=1">問合せフォーム（Google form）</a></li>
 			             </ul>
+			            <h3>リンク</h3>
+			            <ul>
+			              <li>
+			              		<a href="http://www.enpit.jp"><img src=" {{site.baseurl}}/assets/images/enpitlogo.jpg"></a><br>
+			              		enPiT(成長分野を支える情報技術人材の育成拠点の形成)
+			              </li>
+			            </ul>
 			           </section>
 					</div>
 				</div>
@@ -27,7 +34,7 @@
 				<!-- Icons -->
 					<ul id="sns" class="icons">
 						<li><a href="http://twitter.com/enPiT_WiT" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="http://facebook/enpit.wit" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="http://facebook.com/enpit.wit" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 					</ul>
 
 				<!-- Copyright -->
