--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,7 +28,7 @@
 		</noscript>
 		<!--[if lte IE 8]><link rel="stylesheet" href="{{ site.baseurl }}/assets/css/ie/v8.css" /><![endif]-->
 	</head>
-	<body data-spy="scroll" data-target="#nav">
+	<body data-spy="scroll" data-target="#header" data-offset="50">
 
 		<!-- Header -->
 			<div id="header">
