--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,8 +8,8 @@
 	<head>
 		<title>enPiT 女性部会 WiT</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="enPiT女性部会WiTは女性IT技術者の育成とネットワーク形成を目指します" />
+		<meta name="keywords" content="enPiT,WiT,女性IT技術者,IT女子,情報系人材,Tech女子" />
 		<!--[if lte IE 8]><script src="{{ site.baseurl }}/assets/css/ie/html5shiv.js"></script><![endif]-->
 		<script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
 		<script src="{{ site.baseurl }}/assets/js/jquery.dropotron.min.js"></script>
