--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,10 +8,10 @@
 										<li><a href="#">渡辺知恵美（筑波大学、リーダー）</a></li>
 										<li><a href="#">森本千佳子（東京工業大学）</a></li>
 										<li><a href="#">永瀬美穂（産業技術大学院大学）</a></li>
-										<li><a href="#">木塚あゆみ（公立はこだて未来大学）</a></li>
 										<li><a href="#">小口正人（お茶の水女子大学）</a></li>
-										<li><a href="#">山内正人（慶応大学）</a></li>
+										<li><a href="#">若月里香（情報セキュリティ大学院大学）</a></li>
 										<li><a href="#">松本倫子（埼玉大学）</a></li>
+										<li><a href="#">山内正人（慶応大学）</a></li>
 									</ul>
 			           </section>
 			           <section class="6u" id="inquiry">
