--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,12 +6,12 @@
 									<h3>運営委員</h3>
 									<ul class="links">
 										<li><a href="#">渡辺知恵美（筑波大学、リーダー）</a></li>
-										<li><a href="#">森本千佳子（東京工業大学）</a></li>
+										<li><a href="#">森本千佳子（東京工科大学）</a></li>
 										<li><a href="#">永瀬美穂（産業技術大学院大学）</a></li>
 										<li><a href="#">小口正人（お茶の水女子大学）</a></li>
 										<li><a href="#">若月里香（情報セキュリティ大学院大学）</a></li>
 										<li><a href="#">松本倫子（埼玉大学）</a></li>
-										<li><a href="#">山内正人（慶応大学）</a></li>
+										<li><a href="#">山内正人（慶応大学、オブザーバ）</a></li>
 									</ul>
 			           </section>
 			           <section class="6u" id="inquiry">
